--- a/src/assets/styles/styles.less
+++ b/src/assets/styles/styles.less
@@ -3,6 +3,9 @@
 @import './font.less';
 
 @layout-body-background: var(--bg-app);
+// @item-hover-bg: red;
+
+
 
 
 // dropdown avatar
@@ -34,6 +37,17 @@
     background-color: white;
   }
 
+  
+
+
+}
+
+.ant-dropdown {
+
+  .ant-dropdown-menu-item:hover {
+    background-color: #ffffff;
+    color: @blue-base;
+  }
 }
 
 
