--- a/src/app/pages/product-type/product-type.component.html
+++ b/src/app/pages/product-type/product-type.component.html
@@ -1,18 +1,19 @@
-<div class="product-table-feature">
+<div class="product-type-table-feature">
   <button nz-button nzType="primary" (click)="openDrawer()">
-    Thêm sản phẩm
+    Thêm loại sản phẩm
   </button>
-  <app-filter-table (filterChange)="onFilterChange($event)" />
 </div>
 
 <app-shared-table
   [cols]="columns"
-  [rows]="filteredData"
+  [rows]="data"
   [config]="tableConfig"
   (rowClick)="onRowClick($event)"
   (sortChange)="onSortChange($event)"
 ></app-shared-table>
 
 <ng-template #drawerExtraTpl>
-  <button nz-button nzDanger (click)="deleteCurrent()">Xóa sản phẩm</button>
+  <button nz-button nzDanger (click)="deleteCurrent()">
+    Xóa loại sản phẩm
+  </button>
 </ng-template>
