--- a/src/app/pages/product/preview-detail/preview-detail.component.html
+++ b/src/app/pages/product/preview-detail/preview-detail.component.html
@@ -1,4 +1,4 @@
-<form nz-form nzLayout="vertical" [formGroup]="formAdd" class="modern-form">
+<form nz-form nzLayout="vertical" [formGroup]="formPreview" class="modern-form">
   <!-- Product name -->
   <nz-form-item>
     <nz-form-label [nzSpan]="5">Tên sản phẩm</nz-form-label>
@@ -49,6 +49,7 @@
         nzSize="large"
         formControlName="categoryId"
         nzPlaceHolder="Chọn loại sản phẩm"
+        style="width: 100%; height: 38px"
       >
         <nz-option
           *ngFor="let c of productTypes"
@@ -59,15 +60,43 @@
     </nz-form-control>
   </nz-form-item>
 
+  <!-- DateTime create -->
+  <nz-form-item>
+    <nz-form-label [nzSpan]="5">Ngày tạo</nz-form-label>
+    <nz-form-control>
+      <nz-date-picker
+        nzDisabled
+        formControlName="createdAt"
+        nzShowTime
+        nzFormat="dd/MM/yyyy HH:mm"
+        style="width: 100%; height: 38px"
+      />
+    </nz-form-control>
+  </nz-form-item>
+
+  <!-- DateTime update -->
+  <nz-form-item>
+    <nz-form-label [nzSpan]="5">Ngày cập nhật</nz-form-label>
+    <nz-form-control>
+      <nz-date-picker
+        nzDisabled
+        formControlName="updatedAt"
+        nzShowTime
+        nzFormat="dd/MM/yyyy HH:mm"
+        style="width: 100%; height: 38px"
+      />
+    </nz-form-control>
+  </nz-form-item>
+
   <!-- Actions -->
   <div class="form-actions">
     <button
       nz-button
       nzType="primary"
-      [disabled]="formAdd.invalid"
+      [disabled]="formPreview.invalid"
       (click)="save()"
     >
-      Tạo mới
+      Chỉnh sửa
     </button>
 
     <button nz-button (click)="close()">Đóng</button>
